Fixed the DB double show on Restaurants + Users

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -3,5 +3,14 @@
 <%= f.text_field :name %>
 <br>
 <br>
+<%= f.label :location %>
+<%= f.text_field :location %>
+<br>
+<br>
+<%= f.label :food_type %>
+<%= f.text_field :food_type %>
+<br>
+<br>
+<br>
 <%= f.submit %>
 <% end %>
