--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,10 +1,26 @@
-<h1> Welcome </h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <center>
+        <h1><b>Foodster</b></h1>
+        <h3> Here to satisfy your hunger needs. </h3>
+        <br>
+        <h2><em>Featured Restaurants</em></h2>
+</head>
+
+<body>
+    <% @restaurants.each do |restaurant| %>
+    <h3>
+        <li><%= link_to "#{restaurant.name}",restaurant %></li>
+    </h3>
+    <% end %>
+    <br>
+</body>
 
 
-<ol>
-<% @restaurants.each do |restaurant| %>
-<li><%= link_to "#{restaurant.name}", restaurant %></li>
-<% end %></ol>
-<br>
+<%= button_to "Add a new restaurant", new_restaurant_path, method: :get %>
+</center>
 
-<%= button_to "Create new", new_restaurant_path, method: :get %>
+
+</html>
