--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,5 +3,15 @@
 <%= f.text_field :name %>
 <br>
 <br>
+<%= f.label :location %>
+<%= f.text_field :location %>
+<br>
+<br>
+<%= f.label :password %>
+<%= f.text_field :password %>
+<br>
+<br>
+<br>
 <%= f.submit %>
 <% end %>
+
