Full CRUD working for Restaurant Model

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -19,7 +19,7 @@
 </body>
 
 
-<%= button_to "Add a new restaurant", new_restaurant_path, method: :get %>
+<%= button_to "Add a New Restaurant", new_restaurant_path, method: :get %>
 </center>
 
 
