--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,2 +1,14 @@
-<h1> New </h1>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <center>
+        <h1>Foodster</h1>
+        <h3> Here to satisfy your hunger needs. </h3>
+        <h2><em>Let's Add a New Restaurant</em></h2>
+</head>
+
+<body>
 <%= render "form" %>
+</html>
