--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,11 @@
-<h1> Edit </h1>
-<%= render "form" %>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <center>
+        <h2><b>Edit <%="#{@user.name}"%></b></h2>
+        <%= render "form" %>
+    </center>
+</head>
+
+</html>
