--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,2 +1,10 @@
-<h1> Edit </h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <center>
+<h2><b>Edit <%="#{@restaurant.name}"%></b></h2>
 <%= render "form" %>
+</center>
+</head>
+</html>
+
