--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,26 @@
-<h1> Welcome </h1>
+<!DOCTYPE html>
+<html>
 
-<ol>
-<% @users.each do |user| %>
-<li><%= link_to "#{user.name}", user %></li>
-<% end %></ol>
-<br>
-<br>
-<%= button_to "Create new", new_user_path, method: :get %>
+<head>
+    <center>
+        <h1><b>Foodster</b></h1>
+        <h3> Here to satisfy your hunger needs. </h3>
+        <br>
+        <h2><em>Featured Users</em></h2>
+</head>
+
+<body>
+    <% @users.each do |user| %>
+    <h3>
+        <li><%= link_to "#{user.name}",user %></li>
+    </h3>
+    <% end %>
+    <br>
+</body>
+
+
+<%= button_to "Create a New User", new_user_path, method: :get %>
+</center>
+
+
+</html>
