--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,14 @@
-<h1> New </h1>
-<%= render "form" %>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <center>
+        <h1>Foodster</h1>
+        <h3> Here to satisfy your hunger needs. </h3>
+        <h2><em>Let's Add a New User</em></h2>
+</head>
+
+<body>
+    <%= render "form" %>
+
+</html>
