--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,13 +1,20 @@
 
 <%= form_for @review do |f| %>
-<%= f.label :name %>
+<%= f.label :review_name %>
 <%= f.text_field :name %>
+<br>
 <br>
 <label>User</label>
 <%= f.collection_select :user_id, User.all, :id, :name %>
 <br>
+<br>
 <label>Restaurant</label>
 <%= f.collection_select :restaurant_id, Restaurant.all, :id, :name %>
+<br>
+<br>
+<%= f.label :rating %>
+<%= f.text_field :rating %>
+<br>
 <br>
 <%= f.submit %>
 <% end %>
