--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,9 +3,14 @@
 
 <head>
     <center>
+        <h1><b>Foodster</b></h1>
+        <h3> Here to satisfy your hunger needs. </h3>
+        <br>
         <h2><b>Edit <%="#{@user.name}"%></b></h2>
         <%= render "form" %>
-    </center>
+    
 </head>
-
+<br>
+<%= button_to "Go Back", users_path, method: :get %>
+</center>
 </html>
