--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,10 +2,16 @@
 <html>
 
 <head>
+    
     <center>
+        <h1><b>Foodster</b></h1>
+        <h3> Here to satisfy your hunger needs. </h3>
+        <br>
         <h2><b>Edit <%="#{@review.name}"%></b></h2>
         <%= render "form" %>
-    </center>
+    
 </head>
-
+<br>
+<%= button_to "Go Back", reviews_path, method: :get %>
+</center>
 </html>
