--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,16 +11,16 @@
   <h1><b><%= "#{@user.name}"%></b></h1>
   <h3>Location: <%= "#{@user.location}"%></h3>
 
-  <h2><b><%="#{@user.name}"%>'s Reviews/Ratings</b></h2>
+  <h2><b><%="#{@user.name}"%>'s Reviews & Ratings</b></h2>
   <h3>
     <% @user.reviews.each do |review| %>
     <li><%= link_to "#{review.name}", review %></li>
     <% end %>
   </h3>
   <br>
-  <h3><%= link_to "Want to Delete #{@user.name}'s Profile? ", user_path, method: :delete %></h3>
+  <h3><%= link_to "Delete #{@user.name}'s Profile? ", user_path, method: :delete %></h3>
 
-  <h3><%= link_to "Want to Edit #{@user.name}'s Profile?", edit_user_path %></h3>
+  <h3><%= link_to "Edit #{@user.name}'s Profile?", edit_user_path %></h3>
 </body>
 <br>
 <%= button_to "Go Back", users_path, method: :get %>
