--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -2,9 +2,8 @@
 <html>
 <head>
     <center>
-        <h1><b>Foodster</b></h1>
-        <h3> Here to satisfy your hunger needs. </h3>
-        <br>
+        <h4 style="font-family:courier;">"Here to satisfy your hunger needs."</h4>
+        <hr>
 <h2><b>Edit <%="#{@restaurant.name}"%></b></h2>
 
 <%= render "form" %>
