--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,10 +3,10 @@
 
 <head>
     <center>
-        <h1><b>Foodster</b></h1>
-        <h3> Here to satisfy your hunger needs. </h3>
-        <br>
-        <h2><em>Featured Restaurants</em></h2>
+        <h4 style="font-family:courier;">"Here to satisfy your hunger needs."</h4>
+        <hr>
+        <h2 style="font-family:helvetica;"> Featured Restaurants</h2>
+
 </head>
 
 <body>
