--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -3,9 +3,9 @@
 
 <head>
     <center>
-        <h1>Foodster</h1>
-        <h3> Here to satisfy your hunger needs. </h3>
-        <h2><em>Let's Add a New Restaurant</em></h2>
+        <h4 style="font-family:courier;">"Here to satisfy your hunger needs."</h4>
+        <hr>
+        <h2 style="font-family:helvetica;">Let's Add a New Restaurant</h2>
 </head>
 
 <body>
