--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -4,9 +4,8 @@
 <head>
     
     <center>
-        <h1><b>Foodster</b></h1>
-        <h3> Here to satisfy your hunger needs. </h3>
-        <br>
+        <h4 style="font-family:courier;">"Here to satisfy your hunger needs."</h4>
+        <hr>
         <h2><b>Edit <%="#{@review.name}"%></b></h2>
         <%= render "form" %>
     
