--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,9 +3,9 @@
 
 <head>
     <center>
-        <h1>Foodster</h1>
-        <h3> Here to satisfy your hunger needs. </h3>
-        <h2><em>Let's Add a New User</em></h2>
+        <h4 style="font-family:courier;">"Here to satisfy your hunger needs."</h4>
+        <hr>
+        <h2 style="font-family:helvetica;">Let's Add a New User</h2>
 </head>
 
 <body>
