--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,8 @@
 
 <head>
   <center>
-    <h1>Foodster</h1>
-    <h3> Here to satisfy your hunger needs. </h3>
+    <h4 style="font-family:courier;">"Here to satisfy your hunger needs."</h4>
+    <hr>
 </head>
 
 <body>
