Added a cat gif on the bottom for each page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,4 +25,8 @@
     </style>
   </center>
   </body>
+  <center>
+    <img src="https://data.whicdn.com/images/81086528/original.gif"
+      alt="headline" width="260px" height="263">
+  </center>
 </html>
